[package]
name = "reustmann"
version = "0.1.2"
authors = ["Kerosene2000 <renault.cle@gmail.com>"]
keywords = ["von", "neumann", "architecture", "genetic", "algorithm"]
description = "Reustmann is a Von Neumann architecture"
documentation = "https://kerosene2000.github.io/reustmann-doc/reustmann/reustmann/"
repository = "https://github.com/Kerosene2000/Reustmann"
license = "GPL-3.0"

[[bin]]
name = "reustmann"
doc = false

[dependencies]
colorify = "0.2"
nom = "^2.0"
rustyline = "0.2"
