[package]
name = "reustmann"
version = "0.2.1"
authors = ["Kerollmops <renault.cle@gmail.com>"]
keywords = ["von", "neumann", "architecture", "genetic", "algorithm"]
description = "Reustmann is a Von Neumann architecture"
documentation = "https://docs.rs/reustmann"
repository = "https://github.com/Kerollmops/Reustmann"
license = "MIT"

[dependencies]
colorify = "0.2"
rustyline = "0.2"

[dev-dependencies]
bstr = "0.2.14"
